# tracklab

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ai/: README.md
app/: README.md
app/src/: AppLookAndFeel.cpp  AppLookAndFeel.h  AudioClipView.cpp  AudioClipView.h  DesignTokens.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  MixerPanel.cpp  MixerPanel.h  Playhead.cpp  Playhead.h  TimelineRuler.cpp  TimelineRuler.h  TimelineView.cpp  TimelineView.h  Toolbar.cpp  Toolbar.h  TrackRow.cpp  TrackRow.h  UiDrawing.cpp  UiDrawing.h  WorkspacePanel.cpp  WorkspacePanel.h
connectors/: README.md
docs/: AI_LAYER.md  ARCHITECTURE.md  BASE_FEATURES.md  CONNECTORS.md  DEVELOPMENT.md  ROADMAP.md
engine/: AudioEngine.cpp  AudioEngine.h  README.md
scripts/: build.sh
ui/: README.md
